--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     volumes:
       - .:/App
     working_dir: /App        # <--- Add this line
-    command: uvicorn App/api:app --host 0.0.0.0 --port 8000 --reload
+    command: uvicorn App.api:app --host 0.0.0.0 --port 8000 --reload
     environment:
       - PYTHONUNBUFFERED=1
 
